# server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  main.rs
integration-admin/: Cargo.toml  lib.rs  validate.rs
integration-bilibili/: Cargo.toml  channels.rs
integration-discord/: Cargo.toml  cache.rs  commands.rs  interaction.rs  lib.rs  message.rs  validate.rs  verify.rs
integration-discord/testdata/: interaction.0.json  interaction.1.json  interaction.2.json
integration-s3/: Cargo.toml  lib.rs
integration-twitch/: Cargo.toml  access_token.rs  lib.rs  subscribe.rs  subscription.rs  validate.rs  videos.rs
integration-twitch/chat/: collect.rs  mod.rs  parse.rs
integration-twitch/gql/: channel_avatar.rs  channel_panels.rs  mod.rs  stream_metadata.rs  stream_schedule.rs  use_view_count.rs  video_comments.rs  video_comments_by_offset_or_cursor.rs  video_info.rs
integration-twitch/gql/testdata/: channel_avatar.json  stream_metadata.0.json  stream_metadata.1.json  stream_schedule.json  user_view_count.0.json  user_view_count.1.json  video_comments.json  video_comments_by_offset_or_cursor.json
integration-youtube/: Cargo.toml  lib.rs
integration-youtube/data_api/: channels.rs  mod.rs  videos.rs
integration-youtube/pubsub/: event.rs  mod.rs  subscribe.rs  validate.rs
integration-youtube/pubsub/testdata/: deletion.0.xml  deletion.1.xml  modification.0.xml  modification.1.xml
integration-youtube/rss_feed/: mod.rs
integration-youtube/rss_feed/testdata/: feed.0.xml
integration-youtube/thumbnail/: mod.rs
integration-youtube/youtubei/: context.rs  mod.rs
integration-youtube/youtubei/browse_channel/: mod.rs  request.rs  response.rs
integration-youtube/youtubei/browse_live/: mod.rs  request.rs  response.rs
integration-youtube/youtubei/live_chat/: mod.rs  request.rs  response.rs
integration-youtube/youtubei/metadata/: mod.rs  request.rs  response.rs
integration-youtube/youtubei/player/: mod.rs  request.rs  response.rs
vtstat-database/: Cargo.toml  lib.rs  otel.rs  sqlx-data.json
vtstat-database/channel_stats/: add_channel_revenue_stats.rs  add_channel_subscriber_stats.rs  add_channel_view_stats.rs  channel_revenue_stats.rs  channel_subscriber_stats.rs  channel_view_stats.rs  mod.rs
vtstat-database/channels/: create_channel.rs  list_channels.rs  mod.rs  update_channel_stats.rs
vtstat-database/currencies/: list_currencies.rs  mod.rs
vtstat-database/donations/: add_donation.rs  list_donations.rs  mod.rs
vtstat-database/groups/: mod.rs
vtstat-database/jobs/: list_job.rs  mod.rs  next_queued.rs  pull_job.rs  push_job.rs  re_run.rs  update_job.rs
vtstat-database/migrations/: 20220927082215_tables.down.sql  20220927082215_tables.up.sql  20221025045909_subscriptions.sql  20230710093052_add_updated_at.sql  20230718051307_add_subscriptions_unique_constraint.sql  20230728052023_rename_donations_to_stream_events.sql  20230728072611_streams_add_vtuber_id.sql  20230730162240_channels_table_add_stats_columns.sql  20230808052042_alter_groups_table.sql  20230808052626_create_revenue_stats_table.sql  20230816171422_add_stream_id_hash_index_for_stream_events_table.sql
vtstat-database/stream_events/: list_stream_events.rs  mod.rs
vtstat-database/stream_stats/: add_stream_chat_stats.rs  add_stream_viewer_stats.rs  stream_chat_stats.rs  stream_viewer_stats.rs
vtstat-database/stream_stats/fixtures/: channels.sql
vtstat-database/streams/: end_stream.rs  get_stream_by_platform_id.rs  list_streams.rs  mod.rs  start_stream.rs  stream_times.rs  streams_last_updated.rs  upcoming_streams.rs  upsert_stream.rs
vtstat-database/streams/fixtures/: channels.sql
vtstat-database/subscriptions/: insert_notification.rs  list_notifications.rs  list_subscriptions.rs  mod.rs  upsert_subscription.rs
vtstat-database/vtubers/: create_vtuber.rs  list_vtubers.rs  mod.rs
vtstat-request/: Cargo.toml  channels.rs  lib.rs  otel.rs  pubsub.rs  rss.rs  streams.rs  thumbnail.rs  upload.rs
vtstat-request/chat/: mod.rs  response.rs
vtstat-request/chat/proto/: mod.rs
vtstat-request/metadata/: mod.rs  response.rs
vtstat-request/metadata/proto/: mod.rs
vtstat-request/telegram/: message.rs
vtstat-utils/: Cargo.toml  currency.rs  dotenv.rs  lib.rs  metrics.rs  shutdown.rs  tracing.rs  upload.rs
vtstat-web/: Cargo.toml  filters.rs  healthcheck.rs  lib.rs  main.rs  reject.rs
vtstat-web/api_admin/: create_job.rs  create_vtuber.rs  mod.rs  re_run_job.rs
vtstat-web/api_discord/: mod.rs
vtstat-web/api_pubsub/: mod.rs  publish.rs  tests.rs  verify.rs
vtstat-web/api_sitemap/: mod.rs
vtstat-web/api_telegram/: mod.rs
vtstat-web/api_v4/: catalog.rs  channel_stats.rs  channels.rs  channels_list.rs  channels_report.rs  currencies.rs  live_chat.rs  mod.rs  stream_events.rs  stream_stats.rs  stream_times.rs  streams.rs  streams_list.rs  streams_report.rs  vtubers.rs
vtstat-web/api_v4/stream_events/: mod.rs  types.rs
vtstat-worker/: Cargo.toml  healthcheck.rs  lib.rs  main.rs  timer.rs
vtstat-worker/jobs/: collect_youtube_stream_live_chat.rs  collect_youtube_stream_metadata.rs  install_discord_command.rs  mod.rs  refresh_youtube_rss.rs  send_notification.rs  subscribe_youtube_pubsub.rs  update_bilibili_channel_view_and_subscriber.rs  update_channel_stats.rs  update_currency_exchange_rate.rs  update_upcoming_stream.rs  update_youtube_channel_donation.rs  update_youtube_channel_view_and_subscriber.rs  upsert_youtube_stream.rs
vtstats-request/: Cargo.toml  thumbnail.rs
vtstats-utils/: Cargo.toml  currency.rs  lib.rs  metrics.rs  panic.rs  reqwest.rs  shutdown.rs  tracing.rs
vtstats-worker/: Cargo.toml  healthcheck.rs  lib.rs
vtstats-worker/jobs/: collect_twitch_stream.rs  collect_youtube_stream_metadata.rs  health_check.rs  mod.rs  refresh_youtube_rss.rs  send_notification.rs  subscribe_youtube_pubsub.rs  update_channel_stats.rs  update_currency_exchange_rate.rs  update_exchange_rates.rs  upsert_youtube_stream.rs
vtstats-worker/jobs/collect_channel_stats/: bilibili_subscriber.rs  bilibili_view.rs  mod.rs  twitch_revenue.rs  twitch_subscriber.rs  (+2 more)
(+298 files in other folders)
