[package]
name = "vtstat"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
tokio = { version = "1.21.2", features = ["macros", "signal"] }
vtstat-web = { path = "./vtstat-web" }
vtstat-worker = { path = "./vtstat-worker" }
vtstat-database = { path = "./vtstat-database" }
vtstat-utils = { path = "./vtstat-utils" }

[[bin]]
name = "vtstat"
path = "main.rs"

[workspace]
members = [
    ".",
    "integration-admin",
    "integration-discord",
    "integration-telegram",
    "integration-youtube",
    "vtstat-database",
    "vtstat-request",
    "vtstat-utils",
    "vtstat-web",
    "vtstat-worker"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[workspace.dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
base64 = "0.13.0"
once_cell = "1.18.0"
warp = { version = "0.3.3", default-features = false }
reqwest = { version = "0.11.12", default-features = false, features = [
    "json",
    "rustls-tls"
] }
anyhow = { version = "1.0.65", features = ["backtrace"] }
bytes = "1.2.1"
hex = "0.4.3"

[profile.release]
lto = true
strip = true
