[package]
name = "vtstat"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
vtstat-web = { path = "./vtstat-web" }
vtstat-worker = { path = "./vtstat-worker" }
vtstat-database = { path = "./vtstat-database" }
vtstat-utils = { path = "./vtstat-utils" }

[[bin]]
name = "vtstat"
path = "main.rs"

[workspace]
members = [
    ".",
    "integration-admin",
    "integration-discord",
    "integration-telegram",
    "integration-youtube",
    "vtstat-database",
    "vtstat-request",
    "vtstat-utils",
    "vtstat-web",
    "vtstat-worker"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[profile.release]
lto = true
strip = true
