[package]
name = "vtstats"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
tokio = { version = "1.28.2", features = [
    "macros",
    "signal",
    "sync",
    "rt-multi-thread",
] }
vtstats-web = { path = "./vtstats-web" }
vtstats-worker = { path = "./vtstats-worker" }
vtstats-database = { path = "./vtstats-database" }
vtstats-utils = { path = "./vtstats-utils" }

[[bin]]
name = "vtstats"
path = "main.rs"

[workspace]
members = [
    ".",
    "integration-bilibili",
    "integration-discord",
    "integration-googleauth",
    "integration-telegram",
    "integration-youtube",
    "integration-s3",
    "vtstats-database",
    "vtstats-utils",
    "vtstats-web",
    "vtstats-worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[profile.release]
lto = true
strip = true
