[package]
name = "integration-admin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
warp = { version = "0.3.5", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls"
] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
jsonwebtoken = { version = "8.3.0", default-features = false }
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
