[package]
name = "integration-bilibili"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tracing = "0.1.37"
vtstat-utils = { path = "../vtstat-utils" }
