[package]
name = "integration-discord"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
ed25519-dalek = { version = "2.0.0-rc.2", default-features = false }
hex = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
warp = { workspace = true }
serde_with = "2.0.1"
