[package]
name = "integration-s3"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = { version = "0.4.26", default-features = false, features = [
    "serde",
    "clock"
] }
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls"
] }
tracing = "0.1.37"
vtstats-utils = { path = "../vtstats-utils" }
