[package]
name = "integration-twitch"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tracing = "0.1.37"
anyhow = { version = "1.0.71", features = ["backtrace"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
vtstats-utils = { path = "../vtstats-utils" }
twitch_message = "0.1.2"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
serde_with = "3.3.0"
vtstats-database = { path = "../vtstats-database" }
axum = "0.6.20"
axum-extra = "0.8.0"
hyper = "0.14.27"
