[package]
name = "integration-youtube"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.2"
bytes = "1.4.0"
hex = "0.4.3"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls"
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
warp = { version = "0.3.5", default-features = false }
# pubsubhubbub
roxmltree = "0.18.0"
hmac = "0.12.1"
sha-1 = "0.10.1"
