[package]
name = "vtstat-database"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_with = "2.0.1"
sqlx = { version = "0.6.2", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.21.2", features = ["macros"] }
tracing = "0.1.37"
futures-util = "0.3.24"
