[package]
name = "vtstat-database"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_with = "3.0.0"
sqlx = { version = "0.6.3", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
tracing = "0.1.37"
futures-util = "0.3.28"
anyhow = { version = "1.0.71", features = ["backtrace"] }
