[package]
name = "vtstat-request"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
futures = "0.3.24"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_with = "2.0.1"
sha2 = "0.10.6"
tracing = "0.1.37"
reqwest = { version = "0.11.12", default-features = false, features = [
    "json",
    "rustls-tls"
] }
base64 = "0.13.0"
quick-protobuf = "0.8.0"
dotenvy = "0.15.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_json = "1.0.85"
