[package]
name = "vtstat-request"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
metrics = "0.21.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
futures = "0.3.28"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_with = "3.0.0"
sha2 = "0.10.7"
tracing = "0.1.37"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls"
] }
base64 = "0.21.2"
quick-protobuf = "0.8.1"
vtstat-utils = { path = "../vtstat-utils" }

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_json = "1.0.97"
