[package]
name = "vtstat-utils"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
log = "0.4.14"
tracing = "0.1.30"
tokio = { version = "1.21.2", features = ["signal"] }
tracing-newrelic = { version = "0.1.2", default-features = false, features = [
    "rustls-tls"
] }
tracing-subscriber = { version = "0.3.8", default-features = false, features = [
    "fmt",
    "registry",
] }
tracing-appender = "0.2"
anyhow = { workspace = true }
# s3 upload
chrono = { workspace = true }
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
reqwest = { version = "0.11.12", default-features = false, features = [
    "json",
    "rustls-tls"
] }
