[package]
name = "vtstat-utils"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
log = "0.4.19"
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
# metrics
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-util = "0.15.1"
# s3 upload
chrono = { version = "0.4.26", default-features = false, features = [
    "serde",
    "clock"
] }
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls"
] }
# tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "fmt",
    "registry",
] }
tracing-appender = "0.2.2"
