[package]
name = "vtstat-web"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false
default-run = "vtstat-web"

[[bin]]
name = "vtstat-web"
path = "main.rs"

[[bin]]
name = "vtstat-web-healthcheck"
path = "healthcheck.rs"

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.12", default-features = false, features = [
    "rustls-tls"
] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_with = "2.0.1"
tokio = { version = "1.21.2", features = ["macros", "signal"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
warp = { version = "0.3.3", default-features = false }
vtstat-database = { path = "../vtstat-database" }
vtstat-utils = { path = "../vtstat-utils" }
integration-discord = { path = "../integration-discord" }
integration-youtube = { path = "../integration-youtube" }

[dev-dependencies]
pretty_assertions = "1.3.0"
