[package]
name = "vtstat-web"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
metrics = "0.21.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls"
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_with = "3.0.0"
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
warp = { version = "0.3.5", default-features = false }
vtstat-database = { path = "../vtstat-database" }
vtstat-utils = { path = "../vtstat-utils" }
integration-admin = { path = "../integration-admin" }
integration-discord = { path = "../integration-discord" }
integration-youtube = { path = "../integration-youtube" }
integration-s3 = { path = "../integration-s3" }

[dev-dependencies]
pretty_assertions = "1.3.0"
