[package]
name = "vtstat-worker"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.22", features = ["serde"] }
dotenvy = "0.15.5"
futures = "0.3.24"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["macros", "signal"] }
tracing = "0.1.37"
vtstat-database = { path = "../vtstat-database" }
vtstat-request = { path = "../vtstat-request" }
vtstat-utils = { path = "../vtstat-utils" }
integration-discord = { path = "../integration-discord" }
integration-youtube = { path = "../integration-youtube" }
reqwest = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
