[package]
name = "vtstat-worker"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
metrics = "0.21.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
tracing = "0.1.37"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls"
] }
vtstat-database = { path = "../vtstat-database" }
vtstat-request = { path = "../vtstat-request" }
vtstat-utils = { path = "../vtstat-utils" }
integration-discord = { path = "../integration-discord" }
integration-youtube = { path = "../integration-youtube" }

[dev-dependencies]
pretty_assertions = "1.3.0"
