[package]
name = "vtstats-request"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
metrics = "0.21.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
serde_with = "3.0.0"
tracing = "0.1.37"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
    "brotli",
    "deflate",
    "gzip",
] }
vtstats-utils = { path = "../vtstats-utils" }
integration-s3 = { path = "../integration-s3" }

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_json = "1.0.97"
