[package]
name = "vtstats-utils"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
log = "0.4.19"
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
futures = "0.3.28"
# metrics
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", default-features = false, features = [
    "http-listener"
] }
metrics-util = "0.15.1"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
    "async-compression"
] }
# json
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.97", features = ["raw_value"] }
# tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "registry",
] }
backon = "0.4.1"
backtrace = "0.3.69"
