[package]
name = "vtstats-worker"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
metrics = "0.21.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.97", features = ["arbitrary_precision"] }
tokio = { version = "1.28.2", features = ["macros", "signal", "sync"] }
tracing = "0.1.37"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
    "brotli",
    "deflate",
    "gzip",
] }
rust_decimal = { version = "1.32.0", default-features = false, features = [
    "serde-arbitrary-precision",
    "serde-float",
] }
vtstats-database = { path = "../vtstats-database" }
vtstats-utils = { path = "../vtstats-utils" }
integration-bilibili = { path = "../integration-bilibili" }
integration-discord = { path = "../integration-discord" }
integration-s3 = { path = "../integration-s3" }
integration-twitch = { path = "../integration-twitch" }
integration-youtube = { path = "../integration-youtube" }

[dev-dependencies]
pretty_assertions = "1.3.0"
